crates/cox-provider-openai/src/snapshots/cox_provider_openai__chat__tests__chat_stream_one_tool_call.snap
---
source: crates/cox-provider-openai/src/chat.rs
expression: "run_fixture(\"one_tool_call\")"
---
[
  {
    "type": "text_delta",
    "text": "Let me read that file."
  },
  {
    "type": "tool_use_start",
    "id": "00000000000000000000000000",
    "name": "read"
  },
  {
    "type": "tool_use_input_delta",
    "text": "{\"path\":\"src/main.rs\"}"
  },
  {
    "type": "tool_use_end"
  },
  {
    "type": "stop",
    "stop": {
      "type": "end_turn"
    }
  },
  {
    "type": "usage",
    "usage": {
      "input_tokens": 11,
      "output_tokens": 29,
      "cache_read_tokens": 0,
      "cache_write_tokens": 0,
      "estimated": false,
      "cost_usd": 0.0,
      "latency_ms": 0
    }
  }
]
